# Koswat

./: .gitignore  404.html  Dockerfile  DockerfilePixiHook  DockerfilePython  KOSWAT_Handleiding.ipynb  LICENSE  README.md  changelog.html  docker.html  environment.yml  examples.html  index.html  installation.html  koswat_run_as_command_line.md  koswat_run_as_python_package.ipynb  mkdocs.yml  objects.inv  pyproject.toml  readthedocs.yml  search.html  sonar-project.properties  user_manual.html
.config/: Dockerfile  tc_environment.yml
.cz-hooks/: update_pixi_lock.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  environment.yml  postCreateCommand.sh
.env/Scripts/: activate-global-python-argcomplete  dul-receive-pack-script.py  dul-upload-pack-script.py  findpython-script.py  pbs-install-script.py  python-argcomplete-check-easy-install-script  register-python-argcomplete  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
.env/conda-meta/: _python_abi3_support-1.0-hd8ed1ab_2.json  anyio-4.11.0-pyhcf101f3_0.json  asttokens-3.0.0-pyhd8ed1ab_1.json  backports-1.0-pyhd8ed1ab_5.json  backports.tarfile-1.2.0-pyhd8ed1ab_1.json  brotli-python-1.1.0-py313hfe59770_4.json  bzip2-1.0.8-h0ad9c76_8.json  ca-certificates-2025.10.5-h4c7d964_0.json  cachecontrol-0.14.3-pyha770c72_0.json  cachecontrol-with-filecache-0.14.3-pyhd8ed1ab_0.json  certifi-2025.10.5-pyhd8ed1ab_0.json  cffi-2.0.0-py313h5ea7bf4_0.json  charset-normalizer-3.4.3-pyhd8ed1ab_0.json  cleo-2.1.0-pyhd8ed1ab_1.json  colorama-0.4.6-pyhd8ed1ab_1.json  comm-0.2.3-pyhe01879c_0.json  cpython-3.13.9-py313hd8ed1ab_101.json  crashtest-0.4.1-pyhd8ed1ab_1.json  debugpy-1.8.17-py313h927ade5_0.json  decorator-5.2.1-pyhd8ed1ab_0.json  distlib-0.4.0-pyhd8ed1ab_0.json  dulwich-0.24.2-py313hf61f64f_0.json  exceptiongroup-1.3.0-pyhd8ed1ab_0.json  executing-2.2.1-pyhd8ed1ab_0.json  filelock-3.19.1-pyhd8ed1ab_0.json  findpython-0.7.0-pyhff2d567_0.json  h11-0.16.0-pyhd8ed1ab_0.json  h2-4.3.0-pyhcf101f3_0.json  history  hpack-4.1.0-pyhd8ed1ab_0.json  httpcore-1.0.9-pyh29332c3_0.json  httpx-0.28.1-pyhd8ed1ab_0.json  hyperframe-6.1.0-pyhd8ed1ab_0.json  icu-75.1-he0c23c2_0.json  idna-3.10-pyhd8ed1ab_1.json  importlib-metadata-8.6.1-pyha770c72_0.json  importlib_resources-6.5.2-pyhd8ed1ab_0.json  ipykernel-7.1.0-pyh6dadd2b_0.json  ipython-9.6.0-pyh6be1c34_0.json  ipython_pygments_lexers-1.1.1-pyhd8ed1ab_0.json  (+86 more)
.env/etc/: aau_token
.github/: pull_request_template.md  release_template.md
.github/ISSUE_TEMPLATE/: 1-feature_request.yaml  2-bug_report.yaml  3-documentation_improvement.yaml  4-new_release_request.yaml  4-other-task-request.yaml  5-new_release_request.yaml  bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: cd_gh_release.yml  cd_manual_release.yml  cd_rc_bumper.yml  cd_release.yml  cd_release_bumper.yml  ci-bump.yml  ci.yml  ci.yml.disabled  ci_installation.yml  ci_rc_bumper.yml  ci_release.yml  code_cleanup.yml  deploy_binder.yml  deploy_docs.yml  docs.yml
basic_case/: koswat_dike_selection.txt  koswat_general.json
basic_case/Voorbeeld_Project/: aangepast_project.json  dijksecties_compleet.txt  dijksecties_selectie.txt  eenheidsprijzen_2013.json  eenheidsprijzen_2023.json  project.json
basic_case/dike_section_input/: 10-1-1-A-1-A.json  10-1-2-A-1-A.json  10-1-3-B-1-C.json  10-1-4-B-1-B-2.json
basic_case/shp/: dike_locations.sbn
docs/: changelog.md  docker.md  examples.md  index.md  installation.md  requirements.txt  user_manual.md
docs/reference/: koswat.md  koswat_architecture.md  koswat_cost_report.md  koswat_dike.md  koswat_main_workflow.md  koswat_reinforced_profile.md  koswat_strategies.md  koswat_surroundings.md
examples/: KOSWAT_Handleiding.ipynb  README.md  environment.yml  koswat_as_python_package.ipynb  koswat_as_python_package.md  koswat_run_as_python_package.ipynb
examples/basic_case/: KOSWAT_Handleiding.ipynb  koswat_general.json  maak_selectie_kaart.py
examples/scripts/: maak_selectie_kaart.py
koswat/: README.md  __init__.py  __main__.py  builder_protocol.py  koswat_handler.py  koswat_logger.py  koswat_report.py  koswat_scenario.py  main.py
koswat/calculations/: README.md  __init__.py  calculation_protocol.py  list_multi_location_profile_cost_builder.py  multi_location_multi_profile_cost_builder.py  multi_location_profile_cost_builder.py  multi_profile_cost_builder.py  outside_slope_reinforcement_profile_protocol.py  profile_calculation_protocol.py  profile_cost_builder.py  profile_reinforcement.py  profile_reinforcement_cost_builder.py  profile_volume_calculator.py  reinforcement_input_profile_protocol.py  reinforcement_layers_wrapper.py  reinforcement_profile_builder_factory.py  reinforcement_profile_builder_protocol.py  reinforcement_profile_calculation_factory.py  reinforcement_profile_calculation_protocol.py  reinforcement_profile_protocol.py  standard_reinforcement_profile_protocol.py
koswat/configuration/: README.md  koswat_config_protocol.py  koswat_configuration.py  koswat_dike_selection.py  koswat_run_configuration.py  koswat_scenario.py
koswat/core/: README.md  koswat_logger.py
koswat/cost_report/: README.md  cost_report_protocol.py  koswat_report.py  koswat_summary.py  koswat_summary_builder.py  multi_location_profile_cost_report.py  profile_cost_report.py
koswat/dike/: README.md  koswat_input_profile_protocol.py  koswat_profile_protocol.py
koswat/dike_reinforcements/: README.md  __init__.py
koswat/geometries/: __init__.py  calc_library.py  cross_section.py  plot_library.py
reference/: koswat_architecture.html  koswat_cost_report.html  koswat_dike.html  koswat_main_workflow.html  koswat_reinforced_profile.html  koswat_strategies.html  koswat_surroundings.html
scripts/: maak_selectie_kaart.py  plotprofile_org.py
search/: search_index.json
tests/: README.md  __init__.py  conftest.py  library_test_cases.py  test_acceptance.py  test_koswat_handler.py  test_koswat_report.py  test_koswat_scenario.py  test_main.py
(+1382 files in other folders)
