[tool.poetry]
name = "koswat"
version = "0.11.2"
description = "Koswat, from the dutch combination of words `Kosts-Wat` (what are the costs). Analyzes all the possible dikes reinforcements based on a provided traject, with surrounding constructions, and what their related costs will be."
authors = ["Carles S. Soriano Pérez <carles.sorianoperez@deltares.nl>"]
maintainers = ["Peter de Grave <peter.degrave@deltares.nl>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Deltares/koswat"
documentation = ""
packages = [
  {include="koswat"},
]
keywords = ["civil-engineering", "dikes", "flood-defence", "deltares"]
classifiers = [
  'Development Status :: 2 - Pre-Beta',
  'Intended Audience :: Developers, Civil Engineers',
  'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Topic :: Civil Engineering :: Dike reinforcements'
]
include = ["docs/changelog.md"]

[tool.poetry.dependencies]
python = "^3.10"
future = "^0.18.2"
click = "^8.1.3"
matplotlib = "^3.6.0"
pyshp = "^2.3.1"
shapely = "^1.8.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
black = "^22.8.0"
isort = "^5.10.1"
commitizen = "^2.35.0"
mypy = "^0.971"
termcolor = "^2.0.1"
coverage = "^6.4.4"
mkdocs = "^1.4.2"
myst-parser = "^0.18.1"
mkdocstrings-python = "^0.8.3"
mkdocstrings = "^0.19.1"


[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.virtualenvs
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.commitizen]
name = "cz_conventional_commits"
changelog_file = "docs/changelog.md"
update_changelog_on_bump = true
version = "0.11.2"
tag_format = "v$major.$minor.$patch"
version_files= [
    "koswat/__init__.py",
    "pyproject.toml:version",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
