[tool.poetry]
name = "koswat"
version = "0.14.0"
description = "Koswat, from the dutch combination of words `Kosts-Wat` (what are the costs). Analyzes all the possible dikes reinforcements based on a provided traject, with surrounding constructions, and what their related costs will be."
authors = ["Carles S. Soriano Pérez <carles.sorianoperez@deltares.nl>"]
maintainers = ["Peter de Grave <peter.degrave@deltares.nl>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Deltares/koswat"
packages = [
  {include="koswat"},
]
keywords = ["civil-engineering", "dikes", "flood-defence", "deltares"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Natural Language :: English',
  'Intended Audience :: Science/Research',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: GIS',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Hydrology',
]
include = ["docs/changelog.md"]

[tool.poetry.dependencies]
python = "^3.9, <3.11"
click = "^8.1.3"
matplotlib = "^3.7.0"
pyshp = "^2.3.1"
shapely = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-cov = "^3.0.0"
coverage = "^6.4.4"
teamcity-messages = "^1.32"
opencv-python = "^4.8.1.78"
pytest-xdist = "^3.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
commitizen = "^2.35.0"
urllib3 = "1.26.15"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
myst-parser = "^1.0.0"
mkdocstrings-python = "^1.0.0"

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
  /(
      \.git         # exclude a few common directories in the
    | \.github          # root of the project
    | \.env
    | \.venv
    | \.config
    | .pytest_cache
    | .scannerwork
    | .vscode
    | site
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip = [".git", ".github", ".env", ".venv", ".config", ".pytest_cache", ".scannerwork", ".vscode", "site"]

[tool.commitizen]
name = "cz_conventional_commits"
changelog_file = "docs/changelog.md"
update_changelog_on_bump = true
version = "0.14.0"
tag_format = "v$major.$minor.$patch"
version_files= [
    "koswat/__init__.py",
    "pyproject.toml:version",]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "plot: marks tests that generate matplotlib figures (deselect with '-m \"not plot\"')",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
