[project]
name = "koswat"
version = "0.15.0"
description = "Koswat, from the dutch combination of words `Kosts-Wat` (what are the costs). Analyzes all the possible dikes reinforcements based on a provided traject, with surrounding constructions, and what their related costs will be."
authors = [{name = "Carles S. Soriano Pérez", email = "carles.sorianoperez@deltares.com"}]
maintainers = [{name = "Peter de Grave", email = "peter.degrave@deltares.com"}]
license = "GPL-3.0-or-later"
readme = "README.md"
keywords = ["civil-engineering", "dikes", "flood-defence", "deltares"]
classifiers = [
  'Programming Language :: Python :: 3',
  'Natural Language :: English',
  'Intended Audience :: Science/Research',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: GIS',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Scientific/Engineering :: Physics',
  'Topic :: Scientific/Engineering :: Hydrology',
]

dependencies = ["click", "matplotlib", "pyshp", "shapely", "geopandas"]
requires-python = ">= 3.13, <3.14"

[project.urls]
DOCUMENTATION = "https://deltares.github.io/Koswat/"
Repository = "https://github.com/Deltares/koswat"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
koswat = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
click = ">=8.2.1,<9"
matplotlib = ">=3.7.0,<4"
pyshp = ">=3.0.1,<4"
shapely = ">=2.1.1,<3"
geopandas = ">=1.1.1,<2"

[tool.pixi.feature.test.dependencies]
pytest = ">=7.2.1, <8"
pytest-cov = ">=3.0.0, <4"
coverage= ">=7.10.6,<8"
teamcity-messages = ">=1.32, <2"
pytest-xdist = ">=3.3.1, <4"
pytest-profiling = ">=1.7.0, <2"

[tool.pixi.feature.test.tasks]
test = "pytest"

[tool.pixi.feature.docs.dependencies]
mkdocs = ">=1.4.3, <2"
myst-parser = ">=1.0.0, <2"
mkdocstrings-python = ">=1.0.0, <2"

[tool.pixi.feature.docs.tasks]
build-docs = "mkdocs"

[tool.pixi.feature.dev.dependencies]
isort = ">=5.10.1, <6"
urllib3 = "1.26.*"
commitizen = ">=4.8.4,<5"
black = ">=25.1.0,<26"

[tool.pixi.feature.dev.tasks]
isort = "isort"
black = "black"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.environments]
default = { solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "default" }
dev = { features = ["dev", "docs", "test"], solve-group = "default" }
py311 = { features = ["py311"], solve-group = "default" }
py312 = { features = ["py312"], solve-group = "default" }
py313 = { features = ["py313"], solve-group = "default" }
py314 = { features = ["py314"], solve-group = "default" }

[tool.black]
line-length = 88
target-version = ['py313']
exclude = '''
(
  /(
      \.git         # exclude a few common directories in the
    | \.github          # root of the project
    | \.env
    | \.venv
    | \.devcontainer
    | .pytest_cache
    | .scannerwork
    | .vscode
    | site
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip = [".git", ".github", ".pixi", ".env", ".venv", ".devcontainer", ".pytest_cache", ".scannerwork", ".vscode", "site"]

[tool.commitizen]
name = "cz_conventional_commits"
changelog_file = "docs/changelog.md"
update_changelog_on_bump = true
version = "0.15.0"
tag_format = "v$major.$minor.$patch"
version_files= [
    "koswat/__init__.py",
    "pyproject.toml:version",]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "plot: marks tests that generate matplotlib figures (deselect with '-m \"not plot\"')",
]
